--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sanjay.pixabay">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".PixabayApplication"
         android:allowBackup="true"
@@ -9,8 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.search.PixabaySearchActivity">
+        android:theme="@style/Theme.Pixabay">
+        <activity android:name=".ui.search.PixabaySearchActivity" android:theme="@style/Theme.Pixabay.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
